--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>pcl_conversions</name>
   <version>0.2.1</version>
   <description>Provides conversions from PCL data types and ROS message types</description>
@@ -17,17 +17,20 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>cmake_modules</build_depend>
+  <build_depend>eigen</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>pcl_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
-  <run_depend>libpcl-all</run_depend>
-  <run_depend>libpcl-all-dev</run_depend>
-  <run_depend>pcl_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <build_export_depend>eigen</build_export_depend>
+  <build_export_depend>libpcl-all-dev</build_export_depend>
+  <build_export_depend>pcl_msgs</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+
+  <exec_depend>libpcl-all-dev</exec_depend>
 
 </package>
